# QNCA

./: .gitignore  README.md  analysis.ipynb  experiments.py  pyproject.toml  requirements.txt
qnca/: ca_patterns.py  qnca.py
qnca/optimizers/: adam.py  base.py  cma.py  cobyla.py  ga.py  grid.py
results/: CMA.json  COBYLA-finetunning.json  COBYLA.json  GA.json
